--- a/res/layout/dialog_filepreview.xml
+++ b/res/layout/dialog_filepreview.xml
@@ -3,35 +3,40 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
 
-    <TableRow android:padding="2dp" 
-        android:clickable="true"
+    <TableRow
         android:id="@+id/tr_filepreview_1"
-        	android:background="@drawable/corners_selector">
+        android:layout_margin="1dp"
+        android:background="@drawable/corners_selector"
+        android:clickable="true"
+        android:padding="2dp" >
 
         <ImageView
             android:id="@+id/iv_filepreview_1"
             android:layout_width="@dimen/filepreview_img_size"
             android:layout_height="@dimen/filepreview_img_size"
-            android:contentDescription="@string/img_description" />
+            android:contentDescription="@string/img_description"
+            android:scaleType="centerInside" />
 
         <TextView
-             android:focusable="false"
-            android:clickable="false"
             android:id="@+id/tv_filepreview_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:ellipsize="end"
+            android:focusable="false"
             android:maxLines="2"
+            android:paddingEnd="2dp"
             android:paddingStart="2dp"
-             android:paddingEnd="2dp"
             android:paddingTop="5dp"
             android:textSize="12sp" />
     </TableRow>
 
-    <TableRow android:padding="2dp"
-        android:clickable="true"
+    <TableRow
         android:id="@+id/tr_filepreview_2"
-        	android:background="@drawable/corners_selector" >
+        android:layout_margin="1dp"
+        android:background="@drawable/corners_selector"
+        android:clickable="true"
+        android:padding="2dp" >
 
         <ImageView
             android:id="@+id/iv_filepreview_2"
@@ -40,23 +45,25 @@
             android:contentDescription="@string/img_description" />
 
         <TextView
-             android:focusable="false"
-            android:clickable="false"
             android:id="@+id/tv_filepreview_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:ellipsize="end"
+            android:focusable="false"
             android:maxLines="2"
-              android:paddingEnd="2dp"
+            android:paddingEnd="2dp"
             android:paddingStart="2dp"
             android:paddingTop="5dp"
             android:textSize="12sp" />
     </TableRow>
 
-    <TableRow android:padding="2dp" 
-        android:clickable="true"
+    <TableRow
         android:id="@+id/tr_filepreview_3"
-        	android:background="@drawable/corners_selector">
+        android:layout_margin="1dp"
+        android:background="@drawable/corners_selector"
+        android:clickable="true"
+        android:padding="2dp" >
 
         <ImageView
             android:id="@+id/iv_filepreview_3"
@@ -65,23 +72,25 @@
             android:contentDescription="@string/img_description" />
 
         <TextView
-             android:focusable="false"
-            android:clickable="false"
             android:id="@+id/tv_filepreview_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:ellipsize="end"
+            android:focusable="false"
             android:maxLines="2"
-              android:paddingEnd="2dp"
+            android:paddingEnd="2dp"
             android:paddingStart="2dp"
             android:paddingTop="5dp"
             android:textSize="12sp" />
     </TableRow>
 
-    <TableRow android:padding="2dp" 
-        android:clickable="true"
+    <TableRow
         android:id="@+id/tr_filepreview_4"
-        	android:background="@drawable/corners_selector">
+        android:layout_margin="1dp"
+        android:background="@drawable/corners_selector"
+        android:clickable="true"
+        android:padding="2dp" >
 
         <ImageView
             android:id="@+id/iv_filepreview_4"
@@ -90,14 +99,14 @@
             android:contentDescription="@string/img_description" />
 
         <TextView
-            android:focusable="false"
-            android:clickable="false"
             android:id="@+id/tv_filepreview_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:ellipsize="end"
+            android:focusable="false"
             android:maxLines="2"
-              android:paddingEnd="2dp"
+            android:paddingEnd="2dp"
             android:paddingStart="2dp"
             android:paddingTop="5dp"
             android:textSize="12sp" />
