--- a/res/layout/griditem_classify.xml
+++ b/res/layout/griditem_classify.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-   >
+    android:layout_height="match_parent" >
 
     <ImageView
-         android:layout_gravity="center_horizontal"
         android:id="@+id/griditem_img"
         android:layout_width="@dimen/griditem_img"
         android:layout_height="@dimen/griditem_img"
-        android:contentDescription="@string/img_description" />
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@string/img_description"
+        android:scaleType="centerCrop" />
 
     <TextView
-         android:paddingTop="1dp"
-          android:paddingBottom="2dp"
-          android:paddingStart="3dp"
         android:id="@+id/griditem_text"
         android:layout_width="@dimen/griditem_img"
         android:layout_height="wrap_content"
@@ -23,6 +20,9 @@
         android:ellipsize="end"
         android:maxEms="10"
         android:maxLines="1"
+        android:paddingBottom="2dp"
+        android:paddingStart="3dp"
+        android:paddingTop="1dp"
         android:text=""
         android:textColor="@color/black"
         android:textSize="@dimen/griditem_item_textsize" />
