--- a/res/layout/listitem_downlist.xml
+++ b/res/layout/listitem_downlist.xml
@@ -11,6 +11,7 @@
 
     <ImageView
         android:contentDescription="@string/img_description"
+         android:scaleType="centerInside"
         android:id="@+id/iv_download"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -51,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignEnd="@+id/download_bar"
-        android:text="0%"
+        android:text="@string/percent"
         android:textSize="13sp" />
      <Button
         android:focusable="false"
@@ -61,7 +62,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="7dp"
-        android:text="取消"
+        android:text="@string/cancel"
         android:textSize="13sp" />
 
 </RelativeLayout>
