--- a/res/layout/listitem_netfile.xml
+++ b/res/layout/listitem_netfile.xml
@@ -12,6 +12,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="5dp"
+         android:scaleType="centerInside"
         android:contentDescription="@string/img_description"
        />
 
