--- a/res/layout/listitem_plore.xml
+++ b/res/layout/listitem_plore.xml
@@ -20,9 +20,12 @@
     <ImageView
         android:layout_toEndOf="@+id/cb"
         android:id="@+id/fileimg"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginStart="5dp"
+        android:scaleType="centerInside"
         android:contentDescription="@string/img_description" />
 
     <TextView
@@ -34,7 +37,7 @@
         android:ellipsize="end"
         android:ems="10"
         android:maxLines="2"
-        android:paddingTop="3dp"
+        android:paddingTop="5dp"
         android:textSize="15sp" />
 
     <TextView
@@ -45,8 +48,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="2dp"
-        android:paddingTop="3dp"
-        android:textSize="11sp" 
+        android:paddingTop="5dp"
+        android:textSize="12sp" 
         android:gravity="center_horizontal"
         android:textColor="@color/timetext_color"/>
 
