--- a/res/layout/listitem_sharefile.xml
+++ b/res/layout/listitem_sharefile.xml
@@ -8,10 +8,14 @@
     android:paddingTop="0dp" >
 
     <ImageView
+        
         android:id="@+id/im_sharefile"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginStart="5dp"
+         android:scaleType="centerInside"
         android:contentDescription="@string/img_description" />
 
     <TextView
