--- a/res/menu/plore.xml
+++ b/res/menu/plore.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.fileplore.MainActivity" >
+    tools:context="com.changhong.fileplore.MainActivity" >
 
 <item
         android:id="@+id/action_net"
@@ -27,7 +27,7 @@
         android:id="@+id/action_share"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="分享"/>
+        android:title="@string/shareto"/>
  
     <item
         android:id="@+id/action_set"
